<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/lab1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/lab1"
                android:textSize="20sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/lab2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/lab2"
                android:textSize="20sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/lab3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/lab3"
                android:textSize="20sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/lab4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/lab4"
                android:textSize="20sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/lab5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/lab5"
                android:textSize="20sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/lab6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/lab6"
                android:textSize="20sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/lab7"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/lab7"
                android:textSize="20sp" />

            <TextView
                android:textColor="@color/black"
                android:id="@+id/lab8"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/lab8"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>

    <!--    <Button-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Lab1"-->
    <!--        android:background="#fffff"-->
    <!--        android:textColor="#000000"-->
    <!--        />-->
</LinearLayout>